styled navigation bar

--- a/index.html
+++ b/index.html
@@ -9,13 +9,38 @@
   <body>
     <div class="container">
       <div class="container-fluid">
-        <div class="navigation-bar">
-          <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
-          My Dashboard
-          My Account
-          My Payments
-        </div>
-        My Dashboard
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li class="active-nav"><a href="#">My Dashboard</a></li>
+                <li><a href="#">My Account</a></li>
+                <li><a href="#">My Payments</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Log Out</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <span class="title">My Dashboard</span>
         <div>
           <div>
             <img class="sample-image" src="public/images/creditChecker1.png">
