styled the launch boxes

--- a/index.html
+++ b/index.html
@@ -26,53 +26,65 @@
             </div>
           </div>
         </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <span class="title">My Dashboard</span>
-        <div>
-          <div>
-            <img class="sample-image" src="public/images/creditChecker1.png">
-            Credit Checker
-            <button>Launch</button>
-            Tips &amp; tutorials
-            Upgrade
-          </div>
-          <div>
-            <img class="sample-image" src="public/images/creditChecker2.png">
-            Credit Checker
-            <button>Launch</button>
-            Tips &amp; tutorials
-          </div>
-          <div>
-            <img class="sample-image" src="public/images/businessPlanning1.png">
-            Business Planning
-            <button>Launch</button>
-            Tips &amp; tutorials
-          </div>
-        </div>
-        <div>
-          <div id="left-display">
-            <ul>
-              <li>About DB Impress eXtra</li>
-              <li>Acessing DB Impresa eXtra</li>
-              <li>Managing my Acount</li>
-            </ul>
-          </div>
-          <div id="right-display">
-          </div>
-        </div>
+        <div class="title">My Dashboard</div>
+      </div>
+    </div>
+    <div class="jumbotron">
+      <div class="container">
+        <table>
+          <tr>
+            <td>
+              <div class="launchers">
+                <img class="sample-image" src="public/images/creditChecker1.png">
+                <div>
+                  Credit Checker
+                </div>
+                <div>
+                  <button class="btn btn-primary">Launch</button>
+                  Tips &amp; tutorials
+                </div>
+                Upgrade
+              </div>
+            </td>
+            <td></td>
+            <td>
+              <div class="launchers">
+                <img class="sample-image" src="public/images/creditChecker2.png">
+                <div>
+                  Credit Checker
+                </div>
+                <div>
+                  <button class="btn btn-primary">Launch</button>
+                  Tips &amp; tutorials
+                </div>
+              </div>
+            </td>
+            <td></td>
+            <td>
+              <div class="launchers">
+                <img class="sample-image" src="public/images/businessPlanning1.png">
+                <div>
+                  Business Planning
+                </div>
+                <div>
+                  <button class="btn btn-primary">Launch</button>
+                  Tips &amp; tutorials
+                </div>
+              </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div>
+      <div id="left-display">
+        <ul>
+          <li>About DB Impress eXtra</li>
+          <li>Acessing DB Impresa eXtra</li>
+          <li>Managing my Acount</li>
+        </ul>
+      </div>
+      <div id="right-display">
       </div>
     </div>
     
