initialised node and added server file

--- a/index.html
+++ b/index.html
@@ -8,26 +8,24 @@
   </head>
   <body>
     <div class="container">
-      <div class="container-fluid">
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li class="active-nav"><a href="#">My Dashboard</a></li>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">My Payments</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Log Out</a></li>
-              </ul>
-            </div>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
           </div>
-        </nav>
-        <div class="title">My Dashboard</div>
-      </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active-nav"><a href="#">My Dashboard</a></li>
+              <li><a href="#">My Account</a></li>
+              <li><a href="#">My Payments</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Log Out</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="title">My Dashboard</div>
     </div>
     <div class="jumbotron">
       <div class="container">
@@ -36,13 +34,13 @@
             <td>
               <div class="launchers">
                 <img class="sample-image" src="public/images/creditChecker1.png">
-                <div>
+                <p class="launch-title">
                   Credit Checker
-                </div>
-                <div>
+                </p>
+                <p>
                   <button class="btn btn-primary">Launch</button>
                   Tips &amp; tutorials
-                </div>
+                </p>
                 Upgrade
               </div>
             </td>
@@ -50,33 +48,33 @@
             <td>
               <div class="launchers">
                 <img class="sample-image" src="public/images/creditChecker2.png">
-                <div>
+                <p class="launch-title">
                   Credit Checker
-                </div>
-                <div>
+                </p>
+                <p>
                   <button class="btn btn-primary">Launch</button>
                   Tips &amp; tutorials
-                </div>
+                </p>
               </div>
             </td>
             <td></td>
             <td>
               <div class="launchers">
                 <img class="sample-image" src="public/images/businessPlanning1.png">
-                <div>
+                <p class="launch-title">
                   Business Planning
-                </div>
-                <div>
+                </p>
+                <p>
                   <button class="btn btn-primary">Launch</button>
                   Tips &amp; tutorials
-                </div>
+                </p>
               </div>
             </td>
           </tr>
         </table>
       </div>
     </div>
-    <div>
+    <div class="container-fluid">
       <div id="left-display">
         <ul>
           <li>About DB Impress eXtra</li>
