--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/app.js"></script>
     <script src="js/dashController.js"></script>
   </head>
-  <body ng-app="Dashboard">
+  <body ng-app="Dashboard" ng-controller="dashController">
     <div class="container">
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -20,7 +20,9 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active-nav"><a href="/">My Dashboard</a></li>
+              <li><a>|</a></li>
               <li><a href="/">My Account</a></li>
+              <li><a>|</a></li>
               <li><a href="/">My Payments</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -41,9 +43,9 @@
                 <p class="launch-title">
                   Credit Checker
                 </p>
-                <p>
+                <p class="tips-tutorials">
                   <button class="btn btn-primary">Launch</button>
-                  Tips &amp; tutorials
+                  Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
                 </p>
                 Upgrade
               </div>
@@ -55,9 +57,9 @@
                 <p class="launch-title">
                   Credit Checker
                 </p>
-                <p>
+                <p class="tips-tutorials">
                   <button class="btn btn-primary">Launch</button>
-                  Tips &amp; tutorials
+                  Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
                 </p>
               </div>
             </td>
@@ -68,9 +70,9 @@
                 <p class="launch-title">
                   Business Planning
                 </p>
-                <p>
+                <p class="tips-tutorials">
                   <button class="btn btn-primary">Launch</button>
-                  Tips &amp; tutorials
+                  Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
                 </p>
               </div>
             </td>
@@ -78,17 +80,16 @@
         </table>
       </div>
     </div>
-    <div class="container-fluid">
-      <div id="left-display">
+    <div class="bottom-display">
+      <div class="left-display">
         <ul>
           <li><a href="/#/about">About DB Impress eXtra</a></li>
           <li><a href="/#/accessing">Accessing DB Impresa eXtra</a></li>
           <li><a href="/#/manage-account">Managing my Account</a></li>
         </ul>
       </div>
-      <div id="right-display">
+      <div class="right-display">
         <div ng-view></div>
-        Here I am
       </div>
     </div>
     
