--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/app.js"></script>
     <script src="js/dashController.js"></script>
   </head>
-  <body ng-app="Dashboard" ng-controller="dashController">
+  <body ng-app="Dashboard" ng-controller="dashController as ctrl">
     <div class="container">
       <nav class="navbar navbar-default">
         <div class="container-fluid">
