--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="navbar-header">
             <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
           </div>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div>
             <ul class="nav navbar-nav">
               <li class="active-nav"><a href="/">My Dashboard</a></li>
               <li><a>|</a></li>
