amended how the question and answer tables are viewed on mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="navbar-header">
             <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
           </div>
-          <div>
+          <div class="navigation-bar">
             <ul class="nav navbar-nav">
               <li class="active-nav"><a href="/">My Dashboard</a></li>
               <li><a>|</a></li>
@@ -35,9 +35,9 @@
     </div>
     <div class="jumbotron">
       <div class="container">
-        <table>
+        <table class="launch-table">
           <tr>
-            <td>
+            <td class="launch-table-column">
               <div class="launchers">
                 <img class="sample-image" src="public/images/creditChecker1.png">
                 <p class="launch-title">
@@ -50,8 +50,8 @@
                 Upgrade
               </div>
             </td>
-            <td></td>
-            <td>
+            <td class="launch-table-column"></td>
+            <td class="launch-table-column">
               <div class="launchers">
                 <img class="sample-image" src="public/images/creditChecker2.png">
                 <p class="launch-title">
@@ -63,8 +63,8 @@
                 </p>
               </div>
             </td>
-            <td></td>
-            <td>
+            <td class="launch-table-column"></td>
+            <td class="launch-table-column">
               <div class="launchers">
                 <img class="sample-image" src="public/images/businessPlanning1.png">
                 <p class="launch-title">
