--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           </div>
           <div class="navigation-bar">
             <ul class="nav navbar-nav">
-              <li class="active-nav"><a href="/">My Dashboard</a></li>
-              <li><a>|</a></li>
-              <li><a href="/">My Account</a></li>
-              <li><a>|</a></li>
-              <li><a href="/">My Payments</a></li>
+              <li id="my-dashboard" class="active-nav"><a href="/">My Dashboard</a></li>
+              <li class="nav-space"><a>|</a></li>
+              <li id="my-account"><a href="/">My Account</a></li>
+              <li class="nav-space"><a>|</a></li>
+              <li id="my-payments"><a href="/">My Payments</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/">Log Out</a></li>
@@ -83,7 +83,7 @@
     <div class="bottom-display">
       <div class="left-display">
         <ul>
-          <li><a href="/#/about">About DB Impress eXtra</a></li>
+          <li><a href="/#/about">About DB Impresa eXtra</a></li>
           <li><a href="/#/accessing">Accessing DB Impresa eXtra</a></li>
           <li><a href="/#/manage-account">Managing my Account</a></li>
         </ul>
@@ -92,6 +92,30 @@
         <div ng-view></div>
       </div>
     </div>
+
+
+
+    <script>
+
+    $(document).on('click', '#my-dashboard', function() {
+      $('li').removeClass("active-nav")
+      $("#my-dashboard").addClass("active-nav")
+    });
+
+    $(document).on('click', '#my-account', function() {
+      $('li').removeClass("active-nav")
+      $("#my-account").addClass("active-nav")
+    });
+
+    $(document).on('click', '#my-payments', function() {
+      $('li').removeClass("active-nav")
+      $("#my-payments").addClass("active-nav")
+    });
+
+    </script>
+
+
+
     
   </body>
   
