--- a/index.html
+++ b/index.html
@@ -2,120 +2,42 @@
 <html>
   <head>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link href="public/css/dashboardStyle.css" rel="stylesheet">
+  </head>
+  <body ng-app="Dashboard" ng-controller="dashController as ctrl">
+    <div class="wrapper">
+      <div class="container">
+        <div ng-include src="'views/partials/header-and-nav.html'"></div>
+        <div class="title">My Dashboard</div>
+      </div>
+      <div ng-include src="'views/partials/launchers.html'"></div>
+      <table class="bottom-display">
+        <tr>
+          <div class="left-display">
+          <ul>
+            <li><a href="/#/about">About DB Impresa eXtra</a></li>
+            <li><a href="/#/accessing">Accessing DB Impresa eXtra</a></li>
+            <li><a href="/#/manage-account">Managing my Account</a></li>
+          </ul>
+          </div>
+          <div class="right-display">
+            <div ng-view></div>
+          </div>
+        </tr>
+      </table>
+      <div class="push"></div>
+    </div>
+
+    <footer ng-include src="'views/partials/footer.html'"></footer>
+
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <link href="public/css/dashboardStyle.css" rel="stylesheet">
     <script src="js/app.js"></script>
     <script src="js/dashController.js"></script>
-  </head>
-  <body ng-app="Dashboard" ng-controller="dashController as ctrl">
-    <div class="container">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a href="https://www.bcsg.com"><img src="public/images/logo.png"></a>
-          </div>
-          <div class="navigation-bar">
-            <ul class="nav navbar-nav">
-              <li id="my-dashboard" class="active-nav"><a href="/">My Dashboard</a></li>
-              <li class="nav-space"><a>|</a></li>
-              <li id="my-account"><a href="/">My Account</a></li>
-              <li class="nav-space"><a>|</a></li>
-              <li id="my-payments"><a href="/">My Payments</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="/">Log Out</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="title">My Dashboard</div>
-    </div>
-    <div class="jumbotron">
-      <div class="container">
-        <table class="launch-table">
-          <tr>
-            <td class="launch-table-column">
-              <div class="launchers">
-                <img class="sample-image" src="public/images/creditChecker1.png">
-                <p class="launch-title">
-                  Credit Checker
-                </p>
-                <p class="tips-tutorials">
-                  <button class="btn btn-primary">Launch</button>
-                  Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
-                </p>
-                Upgrade
-              </div>
-            </td>
-            <td class="launch-table-column"></td>
-            <td class="launch-table-column">
-              <div class="launchers">
-                <img class="sample-image" src="public/images/creditChecker2.png">
-                <p class="launch-title">
-                  Credit Checker
-                </p>
-                <p class="tips-tutorials">
-                  <button class="btn btn-primary">Launch</button>
-                  Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
-                </p>
-              </div>
-            </td>
-            <td class="launch-table-column"></td>
-            <td class="launch-table-column">
-              <div class="launchers">
-                <img class="sample-image" src="public/images/businessPlanning1.png">
-                <p class="launch-title">
-                  Business Planning
-                </p>
-                <p class="tips-tutorials">
-                  <button class="btn btn-primary">Launch</button>
-                  Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
-                </p>
-              </div>
-            </td>
-          </tr>
-        </table>
-      </div>
-    </div>
-    <div class="bottom-display">
-      <div class="left-display">
-        <ul>
-          <li><a href="/#/about">About DB Impresa eXtra</a></li>
-          <li><a href="/#/accessing">Accessing DB Impresa eXtra</a></li>
-          <li><a href="/#/manage-account">Managing my Account</a></li>
-        </ul>
-      </div>
-      <div class="right-display">
-        <div ng-view></div>
-      </div>
-    </div>
-
-
-
-    <script>
-
-    $(document).on('click', '#my-dashboard', function() {
-      $('li').removeClass("active-nav")
-      $("#my-dashboard").addClass("active-nav")
-    });
-
-    $(document).on('click', '#my-account', function() {
-      $('li').removeClass("active-nav")
-      $("#my-account").addClass("active-nav")
-    });
-
-    $(document).on('click', '#my-payments', function() {
-      $('li').removeClass("active-nav")
-      $("#my-payments").addClass("active-nav")
-    });
-
-    </script>
-
-
-
+    <script src="js/dashboardStyle.js"></script>
     
   </body>
   
